--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mastermind-store",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,7 +10,11 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "lucide-react": "0.453.0"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.0",
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.0.0"
   }
 }
