--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "18.2.0",
+
     "typescript": "^5.4.0",
     "@types/react": "^18.2.0",
     "@types/node": "^20.0.0"
