--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "lucide-react": "^0.542.0",
     "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-
-    "typescript": "^5.4.0",
-    "@types/react": "^18.2.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.4.0"
   }
 }
